Fixed carousel and layout issues with overflow, sidenav fixed pos

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -114,7 +114,8 @@ h3 {
 
 .nav-underlay {
 	position: absolute;
-	width: calc(282px + 14px);
+	min-width: calc(282px + 14px);
+	max-width: calc(282px + 14px);
 	object-fit: cover;
 	z-index: 0;
 	transition: top 0.3s cubic-bezier(0.68, -0.55, 0.27, 1.55);
